tests/paczka2/big_fuzzy/24378193.err
Error in line 1: wXyrln S372 89,7
Error in line 10: dT4d6 S659 39,0
Error in line 15: wXyrln A97 12,6
Error in line 22: XJkS8 S659 -2,7
Error in line 25: A560 A560 5,1
Error in line 26: A560 S372 23,0
Error in line 28: wXyrln A97 43,0
Error in line 27: A560 A97 35,8
Error in line 2: XJkS8 S659 22,2
Error in line 35: XJkS8 A97 15,9
Error in line 40: nE9tkNfIIW S659 86,0
Error in line 49: nE9tkNfIIW S372 94,4
Error in line 43: wXyrln A97 50,7
Error in line 54: jvg8 S372 441,6
Error in line 61: jvg8 A97 23,3
Error in line 68: wXyrln A560 40,2
Error in line 71: wXyrln S372 206,75
Error in line 70: wXyrln S372 41,3
Error in line 72: wXyrln A560 13,2
Error in line 77: sP1u S372 51,5
Error in line 66: jvg8 S659 81,2
Error in line 89: dT4d6 A97 80,5
Error in line 96: XJkS8 A97 87,7
Error in line 105: A560 S659 62,7
Error in line 124: dT4d6 S372 83,9
Error in line 139: wXyrln A97 22,3
Error in line 141: wXyrln S659 60,8
Error in line 148: wXyrln A97 227,7
Error in line 156: XJkS8 A97 58,3
Error in line 162: sP1u A560 49,0
Error in line 172: sP1u A97 17,7
Error in line 174: sP1u S372 82,4
Error in line 191: sP1u A560 58,0
Error in line 165: jvg8 A97 91,6
Error in line 215: XJkS8 S659 49,9
Error in line 220: dT4d6 A560 87,10
Error in line 199: wXyrln A560 217,1
Error in line 225: A560 S659 -1,1
Error in line 217: dT4d6 A560 55,8
Error in line 232: nE9tkNfIIW A97 37,7
Error in line 238: dT4d6 S372 46,8
Error in line 233: nE9tkNfIIW S372 64,3
Error in line 240: dT4d6 S659 27,9
